--- a/src/main/resources/ku/cs/applyToBeASeller.fxml
+++ b/src/main/resources/ku/cs/applyToBeASeller.fxml
@@ -109,37 +109,37 @@
          </font>
       </Label>
 
-      <TextField layoutX="350.0" layoutY="233.0" prefHeight="34.0" prefWidth="271.0" promptText="ชื่อร้านค้าของคุน" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
+      <TextField fx:id="nameShopTextField" layoutX="350.0" layoutY="233.0" prefHeight="34.0" prefWidth="271.0" promptText="ชื่อร้านค้าของคุน" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
          <font>
             <Font name="JasmineUPC" size="18.0" />
          </font>
       </TextField>
 
-      <TextField layoutX="350.0" layoutY="356.0" prefHeight="34.0" prefWidth="521.0" promptText="ที่อยู่ที่สามารถติดต่อได้" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
+      <TextField fx:id="addressShopTextField" layoutX="350.0" layoutY="356.0" prefHeight="34.0" prefWidth="521.0" promptText="ที่อยู่ที่สามารถติดต่อได้" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
          <font>
             <Font name="JasmineUPC" size="18.0" />
          </font>
       </TextField>
 
-      <TextField layoutX="679.0" layoutY="233.0" prefHeight="34.0" prefWidth="271.0" promptText="อธิบายรายละเอียดร้านพอสังเขป" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
+      <TextField fx:id="detailShopTextField" layoutX="679.0" layoutY="233.0" prefHeight="34.0" prefWidth="271.0" promptText="อธิบายรายละเอียดร้านพอสังเขป" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
          <font>
             <Font name="JasmineUPC" size="18.0" />
          </font>
       </TextField>
 
-      <TextField layoutX="350.0" layoutY="420.0" prefHeight="34.0" prefWidth="521.0" promptText="E-mail ของคุณ" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
+      <TextField fx:id="mailShopTextField" layoutX="350.0" layoutY="420.0" prefHeight="34.0" prefWidth="521.0" promptText="E-mail ของคุณ" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
          <font>
             <Font name="JasmineUPC" size="18.0" />
          </font>
       </TextField>
 
-      <TextField layoutX="350.0" layoutY="480.0" prefHeight="34.0" prefWidth="521.0" promptText="เบอร์โทรติดต่อของคุณ" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
+      <TextField fx:id="telShopTextField" layoutX="350.0" layoutY="480.0" prefHeight="34.0" prefWidth="521.0" promptText="เบอร์โทรติดต่อของคุณ" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
           <font>
             <Font name="JasmineUPC" size="19.0" />
          </font>
       </TextField>
 
-      <TextField layoutX="350.0" layoutY="600.0" prefHeight="34.0" prefWidth="513.0" promptText="เลขบัญชีของคุณ" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
+      <TextField fx:id="bankShopTextField" layoutX="350.0" layoutY="600.0" prefHeight="34.0" prefWidth="513.0" promptText="เลขบัญชีของคุณ" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
          <font>
             <Font name="JasmineUPC" size="18.0" />
          </font>
@@ -151,7 +151,7 @@
          </font>
       </Label>
 
-      <Button layoutX="530.0" layoutY="670.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="194.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="สมัครเป็นผู้ขาย" textFill="WHITE">
+      <Button fx:id="submitButton" layoutX="530.0" layoutY="670.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="194.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="สมัครเป็นผู้ขาย" textFill="WHITE">
          <font>
             <Font name="JasmineUPC" size="30.0" />
          </font>
