--- a/src/main/resources/ku/cs/seller.fxml
+++ b/src/main/resources/ku/cs/seller.fxml
@@ -1,16 +1,148 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.ApplyToBeASeller">
    <children>
-      <BorderPane layoutX="303.0" layoutY="151.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
             <HBox prefHeight="69.0" prefWidth="1024.0" BorderPane.alignment="CENTER" />
          </top>
+         <left>
+            <HBox prefHeight="694.0" prefWidth="326.0" style="-fx-background-color: #F5DEB3;" BorderPane.alignment="CENTER">
+               <children>
+                  <GridPane prefHeight="676.0" prefWidth="360.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints maxHeight="208.26669311523438" minHeight="10.0" prefHeight="208.26669311523438" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="132.9999755859375" minHeight="10.0" prefHeight="113.33330688476565" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@image/Icon01.png" />
+                           </image>
+                           <GridPane.margin>
+                              <Insets left="90.0" top="40.0" />
+                           </GridPane.margin>
+                        </ImageView>
+                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" text="ข้อมูลส่วนตัว" textFill="WHITE" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="70.0" top="10.0" />
+                           </GridPane.margin>
+                           <font>
+                              <Font name="JasmineUPC" size="32.0" />
+                           </font>
+                        </Button>
+                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" text="สินค้าในตะกร้า" textFill="WHITE" GridPane.rowIndex="2">
+                           <font>
+                              <Font name="JasmineUPC" size="32.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets left="70.0" top="10.0" />
+                           </GridPane.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" text="ข้อมูลการขาย" textFill="WHITE" GridPane.rowIndex="3">
+                           <GridPane.margin>
+                              <Insets left="70.0" top="10.0" />
+                           </GridPane.margin>
+                           <font>
+                              <Font name="JasmineUPC" size="32.0" />
+                           </font>
+                        </Button>
+                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" text="ประวัติการซื้อ" textFill="WHITE" GridPane.rowIndex="4">
+                           <font>
+                              <Font name="JasmineUPC" size="32.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets left="70.0" top="10.0" />
+                           </GridPane.margin>
+                        </Button>
+                     </children>
+                  </GridPane>
+               </children>
+            </HBox>
+         </left>
+         <center>
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label layoutX="40.0" layoutY="40.0" text="ผู้ขายสินค้า" textFill="#a05e07">
+                     <font>
+                        <Font name="JasmineUPC" size="40.0" />
+                     </font>
+                  </Label>
+                  <Line endX="513.066650390625" endY="-7.62939453125E-6" layoutX="140.0" layoutY="80.0" startX="-100.0" stroke="#a05e07" strokeMiterLimit="100.0" />
+                  <ImageView fitHeight="179.0" fitWidth="238.0" layoutX="240.0" layoutY="120.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@image/profile.jpg" />
+                     </image>
+                  </ImageView>
+                  <Button fx:id="addImgButton" graphicTextGap="2.0" layoutX="382.0" layoutY="261.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="15.0" style="-fx-background-color: F99F28; -fx-background-radius: 10; -fx-border-color: ffffff; -fx-border-width: 2; -fx-border-radius: 10;" text="+" textAlignment="CENTER" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Button>
+                  <Label layoutX="50.0" layoutY="330.0" text="ชื่อสินค้า">
+                     <font>
+                        <Font name="JasmineUPC" size="32.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="375.0" layoutY="330.0" text="ราคาสินค้า">
+                     <font>
+                        <Font name="JasmineUPC" size="32.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="bookNameTextField" layoutX="55.0" layoutY="360.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                  <TextField fx:id="bookPriceTextField" layoutX="380.0" layoutY="360.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                  <Label layoutX="50.0" layoutY="425.0" text="จำนวนสินค้าในคลัง">
+                     <font>
+                        <Font name="JasmineUPC" size="32.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="375.0" layoutY="425.0" text="หมวดหมู่ของสินค้า">
+                     <font>
+                        <Font name="JasmineUPC" size="32.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="bookStockTextField" layoutX="55.0" layoutY="455.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                  <TextField fx:id="bookTypeTextField" layoutX="380.0" layoutY="455.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                  <Label layoutX="50.0" layoutY="515.0" text="รายละเอียดสินค้า">
+                     <font>
+                        <Font name="JasmineUPC" size="32.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="bookDetailTextField" layoutX="55.0" layoutY="545.0" prefHeight="125.0" prefWidth="439.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                  <Button fx:id="addBookButton" layoutX="530.0" layoutY="575.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="125.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="เพิ่มสินค้า" textFill="WHITE">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="allBookButton" layoutX="530.0" layoutY="630.0" mnemonicParsing="false" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="สินค้าทั้งหมด" textFill="WHITE">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Button>
+               </children>
+            </AnchorPane>
+         </center>
       </BorderPane>
    </children>
 </AnchorPane>
