--- a/src/main/resources/ku/cs/basket.fxml
+++ b/src/main/resources/ku/cs/basket.fxml
@@ -15,6 +15,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
@@ -166,30 +167,42 @@
             </HBox>
          </left>
          <center>
-            <ScrollPane prefHeight="500.0" prefWidth="698.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
-               <BorderPane.margin>
-                  <Insets bottom="100.0" top="95.0" />
-               </BorderPane.margin>
-               <content>
-                  <GridPane prefHeight="500.0" prefWidth="702.0" style="-fx-background-color: while;">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                  </GridPane>
-               </content>
-            </ScrollPane>
+            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label text="สินค้าในตะกร้า" textFill="#b4875e">
+                     <font>
+                        <Font name="JasmineUPC" size="42.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="30.0" top="15.0" />
+                     </VBox.margin>
+                  </Label>
+                  <ScrollPane prefHeight="557.0" prefWidth="698.0" style="-fx-background-color: white;">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                     <content>
+                        <GridPane fx:id="gridInBasket" prefHeight="566.0" prefWidth="696.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                        </GridPane>
+                     </content>
+                  </ScrollPane>
+               </children>
+            </VBox>
          </center>
       </BorderPane>
-      <Button layoutX="837.0" layoutY="699.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="169.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="สั่งซื้อสินค้า" textAlignment="CENTER" textFill="#fffefe">
+      <Button layoutX="837.0" layoutY="707.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="169.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="สั่งซื้อสินค้า" textAlignment="CENTER" textFill="#fffefe">
          <font>
             <Font name="JasmineUPC" size="33.0" />
          </font>
       </Button>
-      <Line endX="500.666748046875" endY="1.52587890625E-5" layoutX="450.0" layoutY="161.0" startX="-100.0" stroke="#7e4811" />
+      <Line endX="500.666748046875" endY="1.52587890625E-5" layoutX="444.0" layoutY="124.0" startX="-100.0" stroke="#7e4811" />
    </children>
 </AnchorPane>
