--- a/src/main/resources/ku/cs/style/style.css
+++ b/src/main/resources/ku/cs/style/style.css
@@ -7,3 +7,9 @@
 .borderColor{
     -fx-border-color: linear-gradient(#1d3557, #1d3557);
 }
+.backgroundColorButton{
+    -fx-background-color: linear-gradient(#C9AD88, #C9AD88);
+}
+.backgroundColor3{
+    -fx-background-color: linear-gradient(#FEEBD3, #FFF1DE);
+}
