--- a/src/main/resources/ku/cs/register.fxml
+++ b/src/main/resources/ku/cs/register.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.user.RegisterController">
+<AnchorPane fx:id="registerAnchorPane" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.user.RegisterController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c9ad88" height="768.0" stroke="BLACK" strokeType="INSIDE" width="1024.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#fcfcfc" height="625.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="378.0" AnchorPane.leftAnchor="324.0" AnchorPane.topAnchor="55.0" />
@@ -110,20 +110,11 @@
       <ComboBox fx:id="birthYearChoice" layoutX="348.0" layoutY="484.0" onAction="#setMonthChoice" prefHeight="28.0" prefWidth="90.0" promptText="ปี ( ค.ศ. )" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;" visibleRowCount="6" />
       <ComboBox fx:id="birthMonthChoice" layoutX="454.0" layoutY="484.0" onAction="#setDayChoice" prefHeight="28.0" prefWidth="125.0" promptText="เดือน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;" visibleRowCount="6" />
       <ComboBox fx:id="birthDayChoice" layoutY="484.0" prefHeight="28.0" prefWidth="77.0" promptText="วัน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;" visibleRowCount="6" AnchorPane.rightAnchor="351.0" />
-      <ImageView fx:id="image" fitHeight="90.0" fitWidth="90.0" layoutX="465.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="imageView" fitHeight="90.0" fitWidth="90.0" layoutX="465.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@image/Default.png" />
          </image>
       </ImageView>
       <Button layoutX="537.0" layoutY="192.0" mnemonicParsing="false" onAction="#handleAddImageButton" style="-fx-background-color: c9ad88; -fx-background-radius: 20;" text="+" />
-      <VBox alignment="CENTER_LEFT" layoutX="313.0" layoutY="163.0" maxHeight="450.0" prefHeight="450.0" prefWidth="16.0">
-         <children>
-            <GridPane fx:id="addImageGrid" prefHeight="0.0" prefWidth="0.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-            </GridPane>
-         </children>
-      </VBox>
    </children>
 </AnchorPane>
