--- a/src/main/resources/ku/cs/seller.fxml
+++ b/src/main/resources/ku/cs/seller.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -171,12 +174,15 @@
                            </font>
                         </Label>
                         <Line endX="513.066650390625" endY="-7.62939453125E-6" layoutX="140.0" layoutY="80.0" startX="-100.0" stroke="#a05e07" strokeMiterLimit="100.0" />
-                        <ImageView fx:id="imageView" fitHeight="179.0" fitWidth="238.0" layoutX="240.0" layoutY="120.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="imageView" fitHeight="180.0" fitWidth="180.0" layoutX="240.0" layoutY="100.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@image/profile.jpg" />
+                              <Image url="@image/Default.png" />
                            </image>
+                           <viewport>
+                              <Rectangle2D />
+                           </viewport>
                         </ImageView>
-                        <Button fx:id="addImgButton" graphicTextGap="2.0" layoutX="382.0" layoutY="261.0" mnemonicParsing="false" prefHeight="19.0" prefWidth="15.0" style="-fx-background-color: F99F28; -fx-background-radius: 10; -fx-border-color: ffffff; -fx-border-width: 2; -fx-border-radius: 10;" text="+" textAlignment="CENTER" textFill="WHITE" onAction="#handleAddImageButton">
+                        <Button fx:id="addImgButton" graphicTextGap="2.0" layoutX="400.0" layoutY="260.0" mnemonicParsing="false" onAction="#handleAddImageButton" prefHeight="35.0" prefWidth="33.0" style="-fx-background-color: c9ad88; -fx-background-radius: 20;" text="+" textAlignment="CENTER" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
@@ -191,8 +197,8 @@
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="bookNameTextField" layoutX="55.0" layoutY="360.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
-                        <TextField fx:id="bookAuthorTextField" layoutX="380.0" layoutY="360.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                        <TextField fx:id="bookNameTextField" layoutX="55.0" layoutY="360.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-alignment: c9ad88;" />
+                        <TextField fx:id="bookAuthorTextField" layoutX="380.0" layoutY="360.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
                         <Label layoutX="50.0" layoutY="425.0" text="รหัส ISBN">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
@@ -203,14 +209,13 @@
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="bookISBNTextField" layoutX="55.0" layoutY="455.0" onKeyReleased="#handleKeyBookISBN" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
-                        <TextField fx:id="bookTypeTextField" layoutX="380.0" layoutY="455.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
-                        <Label layoutX="50.0" layoutY="805.0" text="รายละเอียดสินค้า">
+                        <TextField fx:id="bookISBNTextField" layoutX="55.0" layoutY="455.0" onKeyReleased="#handleKeyBookISBN" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
+                        <Label layoutX="50.0" layoutY="710.0" text="รายละเอียดสินค้า">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <Button fx:id="addBookButton" layoutX="375.0" layoutY="845.0" mnemonicParsing="false" onAction="#handleAddBookButton" prefHeight="40.0" prefWidth="125.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="เพิ่มสินค้า" textFill="WHITE">
+                        <Button fx:id="addBookButton" layoutX="375.0" layoutY="800.0" mnemonicParsing="false" onAction="#handleAddBookButton" prefHeight="40.0" prefWidth="125.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="เพิ่มสินค้า" textFill="WHITE">
                            <font>
                               <Font size="20.0" />
                            </font>
@@ -220,19 +225,19 @@
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="bookPageTextField" layoutX="380.0" layoutY="550.0" onKeyReleased="#handleKeyBookPage" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
-                        <Button fx:id="goToSellerStockButton" layoutX="375.0" layoutY="905.0" mnemonicParsing="false" onAction="#handleSellerStockButton" prefHeight="40.0" prefWidth="125.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="สินค้าทั้งหมด" textFill="WHITE">
+                        <TextField fx:id="bookPageTextField" layoutX="380.0" layoutY="550.0" onKeyReleased="#handleKeyBookPage" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
+                        <Button fx:id="goToSellerStockButton" layoutX="375.0" layoutY="850.0" mnemonicParsing="false" onAction="#handleSellerStockButton" prefHeight="40.0" prefWidth="125.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="สินค้าทั้งหมด" textFill="WHITE">
                            <font>
                               <Font size="20.0" />
                            </font>
                         </Button>
-                        <TextArea fx:id="bookDetailTextArea" layoutX="55.0" layoutY="835.0" prefHeight="130.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
+                        <TextArea fx:id="bookDetailTextArea" layoutX="55.0" layoutY="740.0" prefHeight="130.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
                         <Label layoutX="50.0" layoutY="520.0" text="สำนักพิมพ์">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="bookPublisherTextField" layoutX="55.0" layoutY="550.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                        <TextField fx:id="bookPublisherTextField" layoutX="55.0" layoutY="550.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
                         <Label layoutX="50.0" layoutY="615.0" text="จำนวนสินค้าในคลัง">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
@@ -243,20 +248,14 @@
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="bookStockTextField" layoutX="55.0" layoutY="645.0" onKeyReleased="#handleKeyBookStock" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
-                        <TextField fx:id="leastStockTextField" layoutX="380.0" layoutY="645.0" onKeyReleased="#handleKeyLeastStock" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
-                        <Label layoutX="50.0" layoutY="710.0" text="สถานะหนังสือ">
-                           <font>
-                              <Font name="JasmineUPC" size="32.0" />
-                           </font>
-                        </Label>
-                        <TextField fx:id="bookStatusTextField" layoutX="55.0" layoutY="740.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                        <TextField fx:id="bookStockTextField" layoutX="55.0" layoutY="645.0" onKeyReleased="#handleKeyBookStock" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
+                        <TextField fx:id="leastStockTextField" layoutX="380.0" layoutY="645.0" onKeyReleased="#handleKeyLeastStock" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
                         <Label layoutX="375.0" layoutY="710.0" text="ราคาหนังสือ">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="bookPriceTextField" layoutX="380.0" layoutY="740.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10; -fx-effect: shadow;" />
+                        <TextField fx:id="bookPriceTextField" layoutX="380.0" layoutY="740.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
                         <Label fx:id="NotificationBookISBN" layoutX="55.0" layoutY="495.0" textFill="#f20505">
                            <font>
                               <Font name="JasmineUPC" size="12.0" />
@@ -277,11 +276,28 @@
                               <Font name="JasmineUPC" size="12.0" />
                            </font>
                         </Label>
-                        <Label fx:id="NotificationCantAdd" layoutX="55.0" layoutY="980.0" textFill="#f20505">
+                        <Label fx:id="NotificationCantAdd" layoutX="55.0" layoutY="880.0" textFill="#f20505">
                            <font>
                               <Font name="JasmineUPC" size="24.0" />
                            </font>
                         </Label>
+                        <Label fx:id="NotificationBookPrice" layoutX="387.0" layoutY="781.0" textFill="#f20505">
+                           <font>
+                              <Font name="JasmineUPC" size="12.0" />
+                           </font>
+                        </Label>
+                        <MenuButton fx:id="menuButton" layoutX="380.0" layoutY="455.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;">
+                          <items>
+                            <MenuItem fx:id="cartoonMenuButton" mnemonicParsing="false" onAction="#handleCartoonMenuButton" text="หนังสือการ์ตูน" />
+                            <MenuItem fx:id="megazineMenuButton" mnemonicParsing="false" onAction="#handleMegazineMenuButton" text="นิตยสาร" />
+                             <MenuItem fx:id="novelMenuButton" mnemonicParsing="false" onAction="#handleNovelMenuButton" text="นิยาย" />
+                             <MenuItem fx:id="studyBookMenuButton" mnemonicParsing="false" onAction="#handleStudyBookMenuButton" text="หนังสือเรียน" />
+                             <MenuItem fx:id="eBookMenuButton" mnemonicParsing="false" onAction="#handleEBookMenuButton" text="e-book" />
+                          </items>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </MenuButton>
                      </children>
                   </AnchorPane>
                </content>
